// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable test suite should render <DataTable /> with monthly scans 1`] = `
<div>
  <section
    class="data w-100 text-nowrap d-flex"
  >
    <table
      class="table fixedTable"
    >
      <thead>
        <tr>
          <th>
            Team
          </th>
          <th>
            Average
          </th>
          <th>
            Total
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Team 1
          </td>
          <td>
            4958
          </td>
          <td>
            4958
          </td>
        </tr>
        <tr>
          <td>
            Team 2
          </td>
          <td>
            6986
          </td>
          <td>
            6986
          </td>
        </tr>
        <tr>
          <td>
            Team 3
          </td>
          <td>
            7265
          </td>
          <td>
            7265
          </td>
        </tr>
        <tr>
          <td>
            Team 4
          </td>
          <td>
            6527
          </td>
          <td>
            6527
          </td>
        </tr>
        <tr>
          <td>
            Team 5
          </td>
          <td>
            4995
          </td>
          <td>
            4995
          </td>
        </tr>
        <tr>
          <td>
            Team 6
          </td>
          <td>
            6383
          </td>
          <td>
            6383
          </td>
        </tr>
        <tr>
          <td>
            Team 7
          </td>
          <td>
            4904
          </td>
          <td>
            4904
          </td>
        </tr>
        <tr>
          <td>
            Team 8
          </td>
          <td>
            8003
          </td>
          <td>
            8003
          </td>
        </tr>
        <tr>
          <td>
            Team 9
          </td>
          <td>
            4595
          </td>
          <td>
            4595
          </td>
        </tr>
        <tr>
          <td>
            Team 10
          </td>
          <td>
            5260
          </td>
          <td>
            5260
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="w-75 overflow-auto"
    >
      <table
        class="table"
        data-testid="breakdown-results-table"
      >
        <thead>
          <tr>
            <th>
              Oct
            </th>
            <th>
              Nov
            </th>
            <th>
              Dec
            </th>
            <th>
              Jan
            </th>
            <th>
              Feb
            </th>
            <th>
              Mar
            </th>
            <th>
              Apr
            </th>
            <th>
              May
            </th>
            <th>
              Jun
            </th>
            <th>
              Jul
            </th>
            <th>
              Aug
            </th>
            <th>
              Sep
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</div>
`;

exports[`DataTable test suite should render <DataTable /> with weekly scans 1`] = `
<div>
  <section
    class="data w-100 text-nowrap d-flex"
  >
    <table
      class="table fixedTable"
    >
      <thead>
        <tr>
          <th>
            Team
          </th>
          <th>
            Average
          </th>
          <th>
            Total
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Team 1
          </td>
          <td>
            1248
          </td>
          <td>
            1248
          </td>
        </tr>
        <tr>
          <td>
            Team 2
          </td>
          <td>
            1655
          </td>
          <td>
            1655
          </td>
        </tr>
        <tr>
          <td>
            Team 3
          </td>
          <td>
            1995
          </td>
          <td>
            1995
          </td>
        </tr>
        <tr>
          <td>
            Team 4
          </td>
          <td>
            1630
          </td>
          <td>
            1630
          </td>
        </tr>
        <tr>
          <td>
            Team 5
          </td>
          <td>
            1529
          </td>
          <td>
            1529
          </td>
        </tr>
        <tr>
          <td>
            Team 6
          </td>
          <td>
            1469
          </td>
          <td>
            1469
          </td>
        </tr>
        <tr>
          <td>
            Team 7
          </td>
          <td>
            1575
          </td>
          <td>
            1575
          </td>
        </tr>
        <tr>
          <td>
            Team 8
          </td>
          <td>
            1389
          </td>
          <td>
            1389
          </td>
        </tr>
        <tr>
          <td>
            Team 9
          </td>
          <td>
            2125
          </td>
          <td>
            2125
          </td>
        </tr>
        <tr>
          <td>
            Team 10
          </td>
          <td>
            1340
          </td>
          <td>
            1340
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="w-75 overflow-auto"
    >
      <table
        class="table"
        data-testid="breakdown-results-table"
      >
        <thead>
          <tr>
            <th>
              Month: 
              6
              , week: 
              4
            </th>
            <th>
              Month: 
              6
              , week: 
              3
            </th>
            <th>
              Month: 
              6
              , week: 
              2
            </th>
            <th>
              Month: 
              7
              , week: 
              3
            </th>
            <th>
              Month: 
              7
              , week: 
              2
            </th>
            <th>
              Month: 
              7
              , week: 
              1
            </th>
            <th>
              Month: 
              7
              , week: 
              0
            </th>
            <th>
              Month: 
              8
              , week: 
              3
            </th>
            <th>
              Month: 
              8
              , week: 
              2
            </th>
            <th>
              Month: 
              8
              , week: 
              1
            </th>
            <th>
              Month: 
              8
              , week: 
              0
            </th>
            <th>
              Month: 
              9
              , week: 
              0
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              208
            </td>
            <td>
              112
            </td>
            <td>
              82
            </td>
            <td>
              20
            </td>
            <td>
              132
            </td>
            <td>
              94
            </td>
            <td>
              173
            </td>
            <td>
              79
            </td>
            <td>
              109
            </td>
            <td>
              147
            </td>
            <td>
              77
            </td>
            <td>
              15
            </td>
          </tr>
          <tr>
            <td>
              214
            </td>
            <td>
              114
            </td>
            <td>
              163
            </td>
            <td>
              3
            </td>
            <td>
              116
            </td>
            <td>
              198
            </td>
            <td>
              247
            </td>
            <td>
              232
            </td>
            <td>
              141
            </td>
            <td>
              207
            </td>
            <td>
              5
            </td>
            <td>
              15
            </td>
          </tr>
          <tr>
            <td>
              245
            </td>
            <td>
              162
            </td>
            <td>
              143
            </td>
            <td>
              203
            </td>
            <td>
              227
            </td>
            <td>
              14
            </td>
            <td>
              52
            </td>
            <td>
              176
            </td>
            <td>
              231
            </td>
            <td>
              167
            </td>
            <td>
              219
            </td>
            <td>
              156
            </td>
          </tr>
          <tr>
            <td>
              31
            </td>
            <td>
              115
            </td>
            <td>
              188
            </td>
            <td>
              1
            </td>
            <td>
              137
            </td>
            <td>
              142
            </td>
            <td>
              93
            </td>
            <td>
              133
            </td>
            <td>
              218
            </td>
            <td>
              166
            </td>
            <td>
              205
            </td>
            <td>
              201
            </td>
          </tr>
          <tr>
            <td>
              128
            </td>
            <td>
              162
            </td>
            <td>
              15
            </td>
            <td>
              92
            </td>
            <td>
              13
            </td>
            <td>
              218
            </td>
            <td>
              244
            </td>
            <td>
              160
            </td>
            <td>
              242
            </td>
            <td>
              135
            </td>
            <td>
              24
            </td>
            <td>
              96
            </td>
          </tr>
          <tr>
            <td>
              80
            </td>
            <td>
              190
            </td>
            <td>
              159
            </td>
            <td>
              204
            </td>
            <td>
              217
            </td>
            <td>
              23
            </td>
            <td>
              71
            </td>
            <td>
              8
            </td>
            <td>
              22
            </td>
            <td>
              128
            </td>
            <td>
              167
            </td>
            <td>
              200
            </td>
          </tr>
          <tr>
            <td>
              138
            </td>
            <td>
              14
            </td>
            <td>
              215
            </td>
            <td>
              191
            </td>
            <td>
              97
            </td>
            <td>
              31
            </td>
            <td>
              136
            </td>
            <td>
              188
            </td>
            <td>
              209
            </td>
            <td>
              233
            </td>
            <td>
              122
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              49
            </td>
            <td>
              57
            </td>
            <td>
              68
            </td>
            <td>
              24
            </td>
            <td>
              210
            </td>
            <td>
              134
            </td>
            <td>
              108
            </td>
            <td>
              112
            </td>
            <td>
              244
            </td>
            <td>
              160
            </td>
            <td>
              105
            </td>
            <td>
              118
            </td>
          </tr>
          <tr>
            <td>
              232
            </td>
            <td>
              153
            </td>
            <td>
              248
            </td>
            <td>
              90
            </td>
            <td>
              207
            </td>
            <td>
              231
            </td>
            <td>
              169
            </td>
            <td>
              171
            </td>
            <td>
              95
            </td>
            <td>
              236
            </td>
            <td>
              197
            </td>
            <td>
              96
            </td>
          </tr>
          <tr>
            <td>
              60
            </td>
            <td>
              143
            </td>
            <td>
              137
            </td>
            <td>
              104
            </td>
            <td>
              41
            </td>
            <td>
              205
            </td>
            <td>
              59
            </td>
            <td>
              109
            </td>
            <td>
              80
            </td>
            <td>
              84
            </td>
            <td>
              161
            </td>
            <td>
              157
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</div>
`;

exports[`DataTable test suite should render emtpy <DataTable /> 1`] = `<div />`;

exports[`DataTable test suite should render weekly breakdown data in <DataTable /> for monthly scans 1`] = `
<div>
  <section
    class="data w-100 text-nowrap d-flex"
  >
    <table
      class="table fixedTable"
    >
      <thead>
        <tr>
          <th>
            Team
          </th>
          <th>
            Average
          </th>
          <th>
            Total
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Team 1
          </td>
          <td>
            4958
          </td>
          <td>
            4958
          </td>
        </tr>
        <tr>
          <td>
            Team 2
          </td>
          <td>
            6986
          </td>
          <td>
            6986
          </td>
        </tr>
        <tr>
          <td>
            Team 3
          </td>
          <td>
            7265
          </td>
          <td>
            7265
          </td>
        </tr>
        <tr>
          <td>
            Team 4
          </td>
          <td>
            6527
          </td>
          <td>
            6527
          </td>
        </tr>
        <tr>
          <td>
            Team 5
          </td>
          <td>
            4995
          </td>
          <td>
            4995
          </td>
        </tr>
        <tr>
          <td>
            Team 6
          </td>
          <td>
            6383
          </td>
          <td>
            6383
          </td>
        </tr>
        <tr>
          <td>
            Team 7
          </td>
          <td>
            4904
          </td>
          <td>
            4904
          </td>
        </tr>
        <tr>
          <td>
            Team 8
          </td>
          <td>
            8003
          </td>
          <td>
            8003
          </td>
        </tr>
        <tr>
          <td>
            Team 9
          </td>
          <td>
            4595
          </td>
          <td>
            4595
          </td>
        </tr>
        <tr>
          <td>
            Team 10
          </td>
          <td>
            5260
          </td>
          <td>
            5260
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="w-75 overflow-auto"
    >
      <table
        class="table"
        data-testid="breakdown-results-table"
      >
        <thead>
          <tr>
            <th>
              Oct
            </th>
            <th>
              Nov
            </th>
            <th>
              Dec
            </th>
            <th>
              Jan
            </th>
            <th>
              Feb
            </th>
            <th>
              Mar
            </th>
            <th>
              Apr
            </th>
            <th>
              May
            </th>
            <th>
              Jun
            </th>
            <th>
              Jul
            </th>
            <th>
              Aug
            </th>
            <th>
              Sep
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              10
            </td>
            <td>
              11
            </td>
            <td>
              0
            </td>
            <td>
              1
            </td>
            <td>
              2
            </td>
            <td>
              3
            </td>
            <td>
              4
            </td>
            <td>
              5
            </td>
            <td>
              6
            </td>
            <td>
              7
            </td>
            <td>
              8
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="popup__container"
      data-testid="popup__container"
    >
      <div
        class="popup__content bg-light"
      >
        <div>
          Total scans in week 
          0
          : 
          89
        </div>
        <div>
          Total scans in week 
          1
          : 
          70
        </div>
        <div>
          Total scans in week 
          2
          : 
          164
        </div>
        <div>
          Total scans in week 
          3
          : 
          200
        </div>
        <div>
          Total scans in week 
          4
          : 
          179
        </div>
      </div>
    </div>
  </section>
</div>
`;
